# Nvwa-Lite

./: .env.example  .env.local.example  .gitignore  CLAUDE.md  Dockerfile  ENVIRONMENTS.md  QUICKSTART.md  README.md  docker-compose.yml  main.py  pyproject.toml  reference_agno_agent.py  requirements.txt
.streamlit/: config.toml
discuss/: DIRECT_S3_UPLOAD_IMPLEMENTATION.md  FIX_CELL_DISTRIBUTION_AMBIGUITY.md  FIX_PLAN_CONDITION_SPLIT_SUBSET.md  NEXT_SESSION_PROMPT.md  UPLOAD_ARCHITECTURE_PROPOSAL.md  analysis-folder-explained.md  boss-requirements-analysis.md  bugfix-heatmap-gene-count-2026-03-01.md  bugfix-infinite-loop-2026-03-01.md  code-changes-diff-2026-03-13.md  feature-split-view-umap-2026-03-01.md  fix-clustering-auto-detection-2026-03-01.md  fix-de-decision-logic-2026-03-05.md  fix-dynamic-markers-2026-03-01.md  fix-heatmap-code-display-2026-03-01.md  implementation-roadmap.md  implementation-summary-three-fixes-2026-03-13.md  production-improvement-suggestions.md  progress-report-2026-03-01.md  prompt-improvements-2026-02-28.md
docs/: ARCHITECTURE.md  BUG_FIX_SUMMARY.md  CLOUDFLARE_521_FIX.md  CLUSTER_RESOLUTION_VALIDATION.md  CONCURRENCY_SCALING.md  DEPLOYMENT_STRATEGY.md  DE_INTENT_FIX_REPORT.md  DE_INTENT_QUICK_REFERENCE.md  EXECUTIVE_SUMMARY.md  FEEDBACK_WIDGET.md  FILE_STORAGE_ARCHITECTURE.md  FIX_SSL_MODE.md  PHASE1_IMPLEMENTATION_GUIDE.md  PHASE1_STATUS.md  S3_INTEGRATION.md  SIMPLIFIED_DEPLOYMENT.md  TESTING_GUIDE.md  TOOLS_VS_SKILLS.md  UNIT_TESTING_GUIDE.md
migrations/: 001_add_s3_key_to_artifacts.sql  002_add_feedback_responses.sql  (+1 more)
(+100 files in other folders)
